# BabyDraw

./: .gitignore  LICENSE  README.md  project_rule.md  start.sh
backend/: babydraw.db  init_db.py  main.py  pyproject.toml  start.py
backend/app/: main.py
backend/app/api/dependencies/: database.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: cache.py  drawings.py  images.py  speech.py
backend/app/core/: config.py  database.py  logging.py
backend/app/models/: drawing.py
backend/app/services/: cache_service.py  drawing_service.py  image_service.py  speech_service.py
backend/app/utils/: file_utils.py
backend/tests/: test_main.py
frontend/: package-lock.json  package.json
frontend/logs/: .9a4edce2c88ee30dc361b4648e0b10ff356d0df9-audit.json  .f3aaea5ab430983a38eb3bdfea1b28cbfdff7a6f-audit.json
frontend/src/app/app/: page.tsx
frontend/src/app/test-cache/: page.tsx
frontend/src/components/: DrawingCanvas.tsx  DrawingHistory.tsx  LandingPage.tsx  RecordingControls.tsx  TextInput.tsx
frontend/src/hooks/: useCache.ts  useRecording.ts
frontend/src/lib/: logger.ts  utils.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
